k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: config-volume
          configMap:
            name: api-config-map
      containers:
        - name: api
          image: charlymarchiaro/horse-engine-api
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - name: config-volume
              mountPath: /home/node/app/config
