k8s/dupe-detector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dupe-detector-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dupe-detector
  template:
    metadata:
      labels:
        component: dupe-detector
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: dupe-detector
          image: charlymarchiaro/horse-engine-dupe-detector
          resources:
            requests:
              cpu: 10m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
