k8s/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgadmin
  template:
    metadata:
      labels:
        component: pgadmin
    spec:
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: database-pvc
      containers:
        - name: pgadmin
          image: charlymarchiaro/pgadmin 
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m

          volumeMounts:
            - name: pgadmin-storage
              mountPath: /var/lib/pgadmin
              subPath: pgadmin
