k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-pvc
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: postgres
          image: charlymarchiaro/horse-engine-postgres
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 800m
              memory: 1024Mi
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
            - mountPath: /dev/shm
              name: dshm
          args:
            - -c
            - "config_file=/etc/postgresql/postgresql.conf"
