k8s/scrapoxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapoxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: scrapoxy
  template:
    metadata:
      labels:
        component: scrapoxy
    spec:
      nodeSelector:
        node-id: "3"
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: scrapoxy
          image: charlymarchiaro/scrapoxy-auth
          ports:
            - name: proxy
              containerPort: 8888
            - name: commander
              containerPort: 8889
          resources:
            requests:
              cpu: 1500m
              memory: 2500Mi
            limits:
              cpu: 2000m
              memory: 2500Mi
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
