k8s/scrapoxy-pod-reaper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapoxy-pod-reaper-deployment
  namespace: reaper
spec:
  replicas: 1
  selector:
    matchLabels:
      component: scrapoxy-pod-reaper
  template:
    metadata:
      labels:
        component: scrapoxy-pod-reaper
    spec:
      serviceAccount: pod-reaper-service-account
      containers:
        - name: scrapoxy-pod-reaper
          image: target/pod-reaper
          resources:
            limits:
              cpu: 30m
              memory: 30Mi
            requests:
              cpu: 20m
              memory: 20Mi
