k8s/scrapyd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapyd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: scrapyd
  template:
    metadata:
      labels:
        component: scrapyd
    spec:
      nodeSelector:
        node-id: "2"
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: scrapyd
          image: charlymarchiaro/horse-engine-scrapyd
          ports:
            - containerPort: 6800
          resources:
            requests:
              cpu: 1500m
              memory: 2500Mi
            limits:
              cpu: 2000m
              memory: 2500Mi
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
