k8s/spacy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spacy
  template:
    metadata:
      labels:
        component: spacy
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: spacy
          image: jgontrum/spacyapi:all_v2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 2048Mi
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
