k8s/pgadmin-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: pgadmin
  ports:
    - port: 7777
      targetPort: 30200
