k8s/scrapoxy-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapoxy-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: scrapoxy
  ports:
    - name: proxy
      port: 8888
      targetPort: 8888
    - name: commander
      port: 8889
      targetPort: 8889
