k8s/scrapyd-02-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapyd-02-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: scrapyd-02
  ports:
    - port: 6800
      targetPort: 6800
