k8s/spacy-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacy-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: spacy
  ports:
    - port: 80
      targetPort: 80
