k8s/splash-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splash-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: splash
  ports:
    - port: 8050
      targetPort: 8050
